Allow retrieval of multiple locations
